bugs del paquete 6

--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/form-observacion-balance/form-observacion-balance.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/form-observacion-balance/form-observacion-balance.component.html
@@ -3,7 +3,14 @@
     <div class="col-md-12">
       <div class="row justify-content-center align-items-center" style="width: 100%">
         <div class="pr-1">
-          <label class="label-left" for="tieneObservaciones">
+          <label
+            class="label-left"
+            for="tieneObservaciones"
+            [class.color-secondaryColor]="
+              (observaciones.get('tieneObservaciones').invalid && observaciones.get('tieneObservaciones').touched) ||
+              (observaciones.get('tieneObservaciones').invalid && estaEditando)
+            "
+          >
             ¿Desde la supervisión tiene observaciones frente a el balance que deban ser tenidas en cuenta en la
             liquidación?
           </label>
