--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/form-recorrido-obra/form-recorrido-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/form-recorrido-obra/form-recorrido-obra.component.html
@@ -174,14 +174,13 @@
               (addressForm.get('urlActaEntregaFisica').invalid && estaEditando)
             "
           >
-            URL con soporte de votación
+            URL de acta de entrega física
           </label>
         </div>
         <div class="col">
           <mat-form-field class="full-width">
             <input matInput type="url" required formControlName="urlActaEntregaFisica" />
           </mat-form-field>
-          <span class="info-url">Indique la ruta del soporte de esta información</span>
         </div>
         <span class="icon-incompleto">
           <img
