--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-informe-anexos/tabla-informe-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-informe-anexos/tabla-informe-anexos.component.html
@@ -43,7 +43,16 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Ubicación (url/radicado)
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.ubicacion }}</td>
+      <td mat-cell *matCellDef="let element">
+        <a
+          [href]="element.ubicacion"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="ruta-url"
+        >
+          {{ element.ubicacion }}
+        </a>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
