--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-detalle-informe-final-anexos/tabla-detalle-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-detalle-informe-final-anexos/tabla-detalle-informe-final-anexos.component.html
@@ -32,9 +32,7 @@
 
               <!-- tipoAnexo Column -->
               <ng-container matColumnDef="tipoAnexoString">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                  Tipo de anexo
-                </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo de anexo</th>
                 <td mat-cell *matCellDef="let element">
                   <div *ngIf="element.calificacionCodigo === '1'">
                     <span [class.color-secondaryColor]="element.validacionCodigo === ''">
@@ -46,9 +44,7 @@
 
               <!-- Ubicacion Column -->
               <ng-container matColumnDef="Ubicacion">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                  Ubicación (url/radicado)
-                </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Ubicación (url/radicado)</th>
                 <td mat-cell *matCellDef="let element">
                   <div
                     *ngIf="element.calificacionCodigo === '1'"
@@ -63,7 +59,14 @@
                     </span>
                     <!--Digital-->
                     <span *ngIf="element.informeFinalAnexo.tipoAnexo === '2'">
-                      {{ element.informeFinalAnexo.urlSoporte }}
+                      <a
+                        [href]="element.informeFinalAnexo.urlSoporte"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        class="ruta-url"
+                      >
+                        {{ element.informeFinalAnexo.urlSoporte }}
+                      </a>
                     </span>
                   </div>
                 </td>
@@ -71,9 +74,7 @@
 
               <!-- validacion Column -->
               <ng-container matColumnDef="aprobacionCodigoString">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                  Validación
-                </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Validación</th>
                 <td mat-cell *matCellDef="let element">
                   {{ element.aprobacionCodigoString }}
                 </td>
@@ -93,7 +94,10 @@
         </div>
       </section>
 
-      <mat-card class="shipping-card var-main-gris" *ngIf="existeObservacionInterventoria && report.proyecto.informeFinal[0].estadoCumplimiento != '3'">
+      <mat-card
+        class="shipping-card var-main-gris"
+        *ngIf="existeObservacionInterventoria && report.proyecto.informeFinal[0].estadoCumplimiento != '3'"
+      >
         <mat-card-header class="header-card header-card--margin">
           <mat-card-title class="mat-card-title header-card--text">
             Verificación del grupo de novedades y liquidaciones
@@ -102,21 +106,34 @@
         <mat-card-content>
           <p>
             <strong>
-              {{ report.proyecto.informeFinal[0].observacionVigenteInformeFinalInterventoriaNovedades.fechaCreacion | date:'dd/MM/yyyy' }} 
+              {{
+                report.proyecto.informeFinal[0].observacionVigenteInformeFinalInterventoriaNovedades.fechaCreacion
+                  | date: 'dd/MM/yyyy'
+              }}
             </strong>
           </p>
           <p>
             <strong>
               ¿Desde el grupo de novedades y liquidaciones tiene observaciones al informe final del proyecto?:
             </strong>
-            <span *ngIf="report.proyecto.informeFinal[0].tieneObservacionesInterventoria"> Si</span>
-            <span *ngIf="!report.proyecto.informeFinal[0].tieneObservacionesInterventoria"> No</span>
+            <span *ngIf="report.proyecto.informeFinal[0].tieneObservacionesInterventoria"> Si </span>
+            <span *ngIf="!report.proyecto.informeFinal[0].tieneObservacionesInterventoria"> No </span>
           </p>
-          <p *ngIf="report.proyecto.informeFinal[0].tieneObservacionesInterventoria" [innerHTML]="report.proyecto.informeFinal[0].observacionVigenteInformeFinalInterventoriaNovedades.observaciones">
-          </p>
+          <p
+            class="text-justify"
+            *ngIf="report.proyecto.informeFinal[0].tieneObservacionesInterventoria"
+            [innerHTML]="
+              report.proyecto.informeFinal[0].observacionVigenteInformeFinalInterventoriaNovedades.observaciones
+            "
+          ></p>
         </mat-card-content>
       </mat-card>
-      <mat-card class="shipping-card var-main-gris" *ngIf="data != null && existeObservacionInterventoria && report.proyecto.informeFinal[0].estadoCumplimiento == '3'">
+      <mat-card
+        class="shipping-card var-main-gris"
+        *ngIf="
+          data != null && existeObservacionInterventoria && report.proyecto.informeFinal[0].estadoCumplimiento == '3'
+        "
+      >
         <mat-card-header class="header-card header-card--margin">
           <mat-card-title class="mat-card-title header-card--text">
             Verificación del grupo de novedades y liquidaciones
@@ -125,21 +142,23 @@
         <mat-card-content>
           <p>
             <strong>
-              {{ data.fechaCreacion | date:'dd/MM/yyyy' }} 
+              {{ data.fechaCreacion | date: 'dd/MM/yyyy' }}
             </strong>
           </p>
           <p>
             <strong>
               ¿Desde el grupo de novedades y liquidaciones tiene observaciones al informe final del proyecto?:
             </strong>
-            <span *ngIf="data.observaciones != null && data.observaciones != ''"> Si</span>
-            <span *ngIf="data.observaciones == null || data.observaciones === ''"> No</span>
+            <span *ngIf="data.observaciones != null && data.observaciones != ''"> Si </span>
+            <span *ngIf="data.observaciones == null || data.observaciones === ''"> No </span>
           </p>
-          <p *ngIf="data.observaciones != null && data.observaciones != ''" [innerHTML]="data.observaciones">
-          </p>
+          <p
+            class="text-justify"
+            *ngIf="data.observaciones != null && data.observaciones != ''"
+            [innerHTML]="data.observaciones"
+          ></p>
         </mat-card-content>
       </mat-card>
- 
     </mat-expansion-panel>
   </mat-accordion>
 </div>
