--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -81,7 +81,14 @@
                     </span>
                     <!--Digital-->
                     <span *ngIf="element.informeFinalAnexo.tipoAnexo === '2'">
-                      {{ element.informeFinalAnexo.urlSoporte }}
+                      <a
+                        [href]="element.informeFinalAnexo.urlSoporte"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        class="ruta-url"
+                      >
+                        {{ element.informeFinalAnexo.urlSoporte }}
+                      </a>
                     </span>
                   </div>
                 </td>
@@ -105,12 +112,18 @@
                 </th>
                 <td mat-cell *matCellDef="let element">
                   <section class="slect-table-contain mt-1em">
-                    <mat-form-field class="select-width">
+                    <mat-form-field class="select-width"
+                    [class.mat-form-field-invalid]="
+                      element.aprobacionCodigo === '' && estaEditando
+                    ">
                       <mat-label *ngIf="element.validacionCodigo != null">
                         <span *ngIf="element.aprobacionCodigo == null || element.aprobacionCodigo === '0'">{{ element.validacionCodigoString }}</span>
                         <span *ngIf="element.aprobacionCodigo != null">{{ element.aprobacionCodigoString }}</span>
                       </mat-label>
-                      <mat-select [(ngModel)]="element.aprobacionCodigo" (selectionChange)="changeState(element.aprobacionCodigo, element.validacionCodigo)" required>
+                      <mat-select [(ngModel)]="element.aprobacionCodigo" (selectionChange)="changeState(element.aprobacionCodigo, element.validacionCodigo)" 
+                      [class.mat-select-invalid]="
+                        element.aprobacionCodigo === '' && estaEditando
+                      " required>
                         <mat-option *ngFor="let estado of estadoArray" [value]="estado.value">
                           {{ estado.name }}
                         </mat-option>
