--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/tabla-novedad-contratos-obra/tabla-novedad-contratos-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/tabla-novedad-contratos-obra/tabla-novedad-contratos-obra.component.html
@@ -68,21 +68,31 @@
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
       <td mat-cell *matCellDef="let element">
+        
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table"
           [routerLink]="[ 'verificarSolicitudNovedad', element.novedadContractualId ]"
-          *ngIf="element.estadoCodigo === '2' || element.estadoCodigo === '3'">
+          *ngIf="element.estadoCodigo === '2'">
           Verificar solicitud
         </a>
+
+        <a mat-button color="warn" mat-raised-button color="accent" class="btn-table"
+          [routerLink]="[ 'verificarSolicitudNovedad', element.novedadContractualId ]"
+          *ngIf="element.estadoCodigo === '3'">
+          Ver detalle/Editar
+        </a>
+
         <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
           (click)="verificarSolicitud(element.novedadContractualId)"
           *ngIf="element.estadoCodigo === '3' && element.registroCompletoVerificacion === true">
           Enviar al supervisor
         </button>
+        
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table"
           [routerLink]="[ 'verDetalleSolicitudNovedadObra', element.novedadContractualId ]"
           *ngIf="element.estadoCodigo !== '2' && element.estadoCodigo !== '3'">
           Ver detalle
         </a>
+
       </td>
     </ng-container>
 
