--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/registro-nuevo-proceso-judicial/registro-nuevo-proceso-judicial.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/registro-nuevo-proceso-judicial/registro-nuevo-proceso-judicial.component.html
@@ -207,7 +207,9 @@
             <strong><em>“Ficha de estudio”</em></strong> para continuar el proceso
         </div>
     </div>
-    <div *ngIf="this.textCabecera!='Registrar nuevo proceso de defensa judicial'">
+    <!--Observaciones de Comité Técnico-->
+    <div
+        *ngIf="this.textCabecera!='Registrar nuevo proceso de defensa judicial' && defensaJudicial.estadoProcesoCodigo=='4'">
         <mat-card class="shipping-card mainGris">
             <mat-card-header class="header-card header-card--margin">
                 <mat-card-title class="header-card--text textoGris">
@@ -215,7 +217,21 @@
                 </mat-card-title>
             </mat-card-header>
             <mat-card-content style="text-align: left;">
-                <p>En el acordeón Convocados</p>
+                <div [innerHtml]="defensaJudicial.observacionesComiteTecnico"></div> 
+            </mat-card-content>
+        </mat-card>
+    </div>
+    <!--Observaciones de Comité Fiduciario-->
+    <div
+        *ngIf="this.textCabecera!='Registrar nuevo proceso de defensa judicial'  && defensaJudicial.estadoProcesoCodigo=='7'">
+        <mat-card class="shipping-card mainGris">
+            <mat-card-header class="header-card header-card--margin">
+                <mat-card-title class="header-card--text textoGris">
+                    Observaciones
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content style="text-align: left;">
+                <div [innerHtml]="defensaJudicial.obversacionesComiteFiduciario"></div> 
             </mat-card-content>
         </mat-card>
     </div>
