--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/tabla-proyectos/tabla-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/tabla-proyectos/tabla-proyectos.component.html
@@ -104,7 +104,7 @@
         </a>
         <button
           *ngIf="
-            element.registroCompletoEntregaEtc === true && element.estadoEntregaEtc !== '2' && element.estadoEntregaEtc
+            element.registroCompletoEntregaEtc === 'Completo' && element.estadoEntregaEtc !== '2' && element.estadoEntregaEtc
           "
           mat-button
           mat-raised-button
