--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
@@ -115,7 +115,7 @@
             (element.estadoValidacion === '1' ||
               element.estadoValidacion === '2' ||
               element.estadoValidacion === '9') &&
-            element.registroCompletoValidacion
+            element.registroCompletoValidacion === 'Completo'
           "
           mat-button
           mat-raised-button
