--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
@@ -14,7 +14,7 @@
     <ng-container matColumnDef="fechaCreacion">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha de envío del informe final</th>
       <td mat-cell *matCellDef="let element">
-        <b>{{ element.fechaCreacion }}</b>
+        <b>{{ element.fechaEnvio }}</b>
       </td>
     </ng-container>
 
