--- a/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/ver-bitacora/ver-bitacora.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/ver-bitacora/ver-bitacora.component.html
@@ -5,17 +5,17 @@
     </a>
   </div>
   <h1 class="title-menu--h1">
-    Ver bitacora registro de seguimiento diario LJ776554
+    Ver bitacora registro de seguimiento diario {{ proyecto.llaveMen }}
   </h1>
   <p class="colorMainColor mt-05em mb-2em">
-    <span class="mx-1em">fecha de último reporte:
+    <span class="mx-1em">Fecha de último reporte:
       <b> {{ proyecto.fechaUltimoSeguimientoDiario | date: 'dd/MM/yyyy' }}</b>
     </span>
     <span class="mx-1em">{{ proyecto.departamento }}</span>
     <span class="mx-1em">{{ proyecto.municipio }}</span>
     <span class="mx-1em">{{ proyecto.institucionEducativa }}</span>
     <span class="mx-1em">{{ proyecto.sede }}</span >
-  </p>
+  </p> 
 
   <div class="busqueda">
     <mat-form-field appearance="outline" class="busqueda--input">
