--- a/asivamosffie.web/asivamosffie/src/app/_pages/cambiar-contrasena/components/cambiar-contrasena/cambiar-contrasena.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/cambiar-contrasena/components/cambiar-contrasena/cambiar-contrasena.component.html
@@ -1,42 +1,107 @@
 <div class="container text-center recuperar-pass">
-    <div class="text-right">
-        <a routerLink="/home" mat-button color="primary" class="btn-regresar">
-            <img src="assets/img/icon/regresar.svg" alt="Regresar">
-        </a>
-    </div>
+  <div class="text-right">
+    <a routerLink="/home" mat-button color="primary" class="btn-regresar">
+      <img src="assets/img/icon/regresar.svg" alt="Regresar" />
+    </a>
+  </div>
 
-    <h1 class="title-menu--h1">
-        Cambiar contraseña
-    </h1>
-    <div class="text-clean">*Debe tener en cuenta que la contraseña debe contener letras mayúsculas, letras minúsculas, números y caracteres especiales, con un tamaño mínimo de 8 caracteres y máximo 15 caracteres.</div>
+  <h1 class="title-menu--h1">Cambiar contraseña</h1>
+  <div class="text-clean">
+    *Debe tener en cuenta que la contraseña debe contener letras mayúsculas, letras minúsculas, números y caracteres
+    especiales, con un tamaño mínimo de 8 caracteres y máximo 15 caracteres.
+  </div>
 
-    <form [formGroup]="formChangePassword" novalidate (ngSubmit)="cambiarContrasena($event)">
-        <mat-form-field appearance="outline" class="form-input asterisco nocontent">
-            <mat-label>Contraseña Actual * </mat-label>
-            <input matInput [type]="verClaveActual ? 'password' : 'text'"
-                (keyup)="validatePass()" maxlength="15"
-                [readonly]="passwordRecovered!=null" required formControlName="currentPassword">
-            <button mat-icon-button matSuffix (click)="verClaveActual = !verClaveActual" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="verClaveActual" class="ver-contrasena" type="button">
-                <img [src]="verClaveActual ? 'assets/img/icon/ojo-gris.svg' : 'assets/img/icon/ojo-azul.svg'" alt="Ver contraseña">
-            </button>
-        </mat-form-field>
-        <span class="info-error" *ngIf="errorCurrentPassword">{{errorCurrentPassword}}</span>
-        <mat-form-field appearance="outline" class="form-input asterisco nocontent">
-            <mat-label>Contraseña Nueva * </mat-label>
-            <input matInput [type]="verClaveNueva ? 'password' : 'text'"  maxlength="15" required formControlName="newPassword">
-            <button mat-icon-button matSuffix (click)="verClaveNueva = !verClaveNueva" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="verClaveNueva" class="ver-contrasena" type="button">
-                <img [src]="verClaveNueva ? 'assets/img/icon/ojo-gris.svg' : 'assets/img/icon/ojo-azul.svg'" alt="Ver contraseña">
-            </button>
-        </mat-form-field>
-        <span class="info-error" *ngIf="formChangePassword.get('newPassword').invalid && formChangePassword.value.newPassword != ''">Lo sentimos, la nueva contraseña no cumple con los estándares de seguridad.</span>
-        <mat-form-field appearance="outline" class="form-input asterisco nocontent">
-            <mat-label>Confirmar Contraseña * </mat-label>
-            <input matInput [type]="verClaveConfirmar ? 'password' : 'text'"  maxlength="15" required formControlName="confirmPassword">
-            <button mat-icon-button matSuffix (click)="verClaveConfirmar = !verClaveConfirmar" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="verClaveConfirmar" class="ver-contrasena" type="button">
-                <img [src]="verClaveConfirmar ? 'assets/img/icon/ojo-gris.svg' : 'assets/img/icon/ojo-azul.svg'" alt="Ver contraseña">
-            </button>
-        </mat-form-field>
-        <span class="info-error" *ngIf="validarSiSonIguales()">Lo sentimos, la nueva contraseña y confirmación no coinciden.</span>
-        <button mat-raised-button color="accent" type="submit" [disabled]="disabledBtn()" class="btn-cambiar-pass">Cambiar Contraseña</button>
-    </form>
+  <form [formGroup]="formChangePassword" novalidate (ngSubmit)="cambiarContrasena($event)">
+    <mat-form-field appearance="outline" class="form-input asterisco nocontent">
+      <mat-label>Contraseña Actual * </mat-label>
+      <input
+        matInput
+        [type]="verClaveActual ? 'password' : 'text'"
+        (keyup)="validatePass()"
+        [readonly]="passwordRecovered != null"
+        required
+        formControlName="currentPassword"
+      />
+      <button
+        mat-icon-button
+        matSuffix
+        (click)="verClaveActual = !verClaveActual"
+        [attr.aria-label]="'Hide password'"
+        [attr.aria-pressed]="verClaveActual"
+        class="ver-contrasena"
+        type="button"
+      >
+        <img
+          [src]="verClaveActual ? 'assets/img/icon/ojo-gris.svg' : 'assets/img/icon/ojo-azul.svg'"
+          alt="Ver contraseña"
+        />
+      </button>
+    </mat-form-field>
+    <span class="info-error" *ngIf="errorCurrentPassword" [innerHTML]="errorCurrentPassword"></span>
+    <mat-form-field appearance="outline" class="form-input asterisco nocontent">
+      <mat-label>Contraseña Nueva * </mat-label>
+      <input
+        matInput
+        [type]="verClaveNueva ? 'password' : 'text'"
+        maxlength="15"
+        required
+        formControlName="newPassword"
+      />
+      <button
+        mat-icon-button
+        matSuffix
+        (click)="verClaveNueva = !verClaveNueva"
+        [attr.aria-label]="'Hide password'"
+        [attr.aria-pressed]="verClaveNueva"
+        class="ver-contrasena"
+        type="button"
+      >
+        <img
+          [src]="verClaveNueva ? 'assets/img/icon/ojo-gris.svg' : 'assets/img/icon/ojo-azul.svg'"
+          alt="Ver contraseña"
+        />
+      </button>
+    </mat-form-field>
+    <span
+      class="info-error"
+      *ngIf="formChangePassword.get('newPassword').invalid && formChangePassword.value.newPassword != ''"
+      >Lo sentimos, la nueva contraseña no cumple con los estándares de seguridad.</span
+    >
+    <mat-form-field appearance="outline" class="form-input asterisco nocontent">
+      <mat-label>Confirmar Contraseña * </mat-label>
+      <input
+        matInput
+        [type]="verClaveConfirmar ? 'password' : 'text'"
+        maxlength="15"
+        required
+        formControlName="confirmPassword"
+      />
+      <button
+        mat-icon-button
+        matSuffix
+        (click)="verClaveConfirmar = !verClaveConfirmar"
+        [attr.aria-label]="'Hide password'"
+        [attr.aria-pressed]="verClaveConfirmar"
+        class="ver-contrasena"
+        type="button"
+      >
+        <img
+          [src]="verClaveConfirmar ? 'assets/img/icon/ojo-gris.svg' : 'assets/img/icon/ojo-azul.svg'"
+          alt="Ver contraseña"
+        />
+      </button>
+    </mat-form-field>
+    <span class="info-error" *ngIf="validarSiSonIguales()"
+      >Lo sentimos, la nueva contraseña y confirmación no coinciden.</span
+    >
+    <button
+      mat-raised-button
+      color="accent"
+      type="submit"
+      [disabled]="formChangePassword.invalid"
+      class="btn-cambiar-pass"
+    >
+      Cambiar Contraseña
+    </button>
+  </form>
 </div>
