--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/control-tabla-proceso-defensa-judicial/control-tabla-proceso-defensa-judicial.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/control-tabla-proceso-defensa-judicial/control-tabla-proceso-defensa-judicial.component.html
@@ -58,7 +58,7 @@
                     Eliminar
                 </button>
                 <button mat-raised-button color="accent" class="btn-table"
-                    (click)="cerrarProceso(element.defensaJudicialId)" *ngIf="element.estadoProcesoCodigo === '9'">
+                    (click)="cerrarProceso(element.defensaJudicialId)" *ngIf="element.estadoProcesoCodigo === '9' && element.esprocesoResultadoDefinitivo==true">
                     Cerrar proceso
                 </button>
                 <button mat-raised-button color="accent" class="btn-table"
