--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-seguimiento-diario/components/verificar-seguimiento/verificar-seguimiento.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-seguimiento-diario/components/verificar-seguimiento/verificar-seguimiento.component.html
@@ -5,7 +5,7 @@
     </a>
   </div>
   <h1 class="title-menu--h1">
-    Verificar seguimiento diario {{ proyecto.llaveMen }}
+    {{ seguimiento.estadoCodigo === '3' ? 'Ver detalle/Editar' : '' }} Verificar seguimiento diario {{ proyecto.llaveMen }}
   </h1>
   <p class="colorMainColor mt-05em">
     <span class="mx-1em" *ngIf="seguimiento" >{{ seguimiento.fechaSeguimiento | date: 'dd/MM/yyyy' }}</span>
